--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -37,6 +37,9 @@
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
+    //const fullNames = inventors.map(inventor => inventor.first + inventor.last); // works but doesn't add a space between the names
+    const fullNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`); // using template strings
+    console.log(fullNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
