using reduce method instead of a for loop

--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -52,11 +52,15 @@
     // });
 
     const ordered = inventors.sort((a, b) => a.year > b.year ? 1 : -1); // same as the above but much easier due to ternary operator ? being used to replace the if
-
-    console.table(ordered);
+    console.table(ordered); // bubble sorted
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
+    const totalYears = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+    }, 0);
+
+    console.log(totalYears);
 
     // 5. Sort the inventors by years lived
 
