--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -74,17 +74,23 @@
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
     // go to the above page and enter this in the console
-    const category = document.querySelector('.mw-category');
-    const links = [...category.querySelectorAll('a')]; 
+    // const category = document.querySelector('.mw-category');
+    // const links = [...category.querySelectorAll('a')]; 
     // querySelectorAll returns a node list so in order to call map on it the list needs to be converted to an array
     // can use Array.from() or ES6 spread which looks like this [...array]
 
-    const de = links
-                .map(link => link.textContent)
-                .filter(streetName => streetName.includes('de'));
+    // const de = links
+    //             .map(link => link.textContent)
+    //             .filter(streetName => streetName.includes('de'));
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const alpha = people.sort((lastOne, nextOne) => {
+      const [aLast, aFirst] = lastOne.split(', ');
+      const [bLast, bFirst] = nextOne.split(', ');
+      return aLast > bLast ? 1 : -1;
+    });
+    console.log(alpha);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
