--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -21,7 +21,7 @@ const cities = [];
 
 fetch(endpoint)
   .then(blob => blob.json())
-  .then(data => console.log(data)); // fetch returns a promise
+  .then(data => cities.push(...data)); // fetch returns a promise
 
 </script>
   </body>
