--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -23,6 +23,13 @@ fetch(endpoint)
   .then(blob => blob.json())
   .then(data => cities.push(...data)); // fetch returns a promise
 
+function findMatches(wordToMatch, cities) {
+  return cities.filter(place => {
+    // here we figure out if the city or state matches the search
+    const regex = new RegExp(wordToMatch, 'gi');
+    return place.city.match(regex) || place.state.match(regex)
+  });
+}
 </script>
   </body>
 </html>
