--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -30,6 +30,15 @@ function findMatches(wordToMatch, cities) {
     return place.city.match(regex) || place.state.match(regex)
   });
 }
+
+function displayMatches() {
+
+}
+
+const searchInput = document.querySelector('.search');
+const searchInput = document.querySelector('.suggestions');
+
+searchInput.addEventListener('change', displayMatches);
 </script>
   </body>
 </html>
