--- a/06 - Type Ahead/index-START.html
+++ b/06 - Type Ahead/index-START.html
@@ -39,6 +39,7 @@ const searchInput = document.querySelector('.search');
 const searchInput = document.querySelector('.suggestions');
 
 searchInput.addEventListener('change', displayMatches);
+searchInput.addEventListener('keyup', displayMatches);
 </script>
   </body>
 </html>
