--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -66,6 +66,21 @@
     // Find the comment with this ID
     // delete the comment with the ID of 823423
 
+    const index = comments.findIndex(comment => comment.id === 823423)
+
+    console.log(index);
+
+    // 2 ways to do same thing but the second keeps the first array in tact and creates a new array
+    // comments.splice(index, 1);
+
+    const newComments = [
+      ...comments.slice(0, index),
+      ...comments.slice(index + 1)
+    ];
+
+    console.table(comments);
+    console.table(newComments);
+
   </script>
 </body>
 </html>
