--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,28 +18,59 @@
     }
 
     // Regular
+    console.log('hello');
 
     // Interpolated
+    console.log('Hello I am a %s string!', '');
+    // ES6 way with back ticks and template strings
+    // console.log(`Hello I am a ${var}`);
 
     // Styled
+    console.log('%c I am some great text', 'font-size:25px; background:red; text-shadow: 10px 10px 0 blue');
 
     // warning!
+    console.warn('WARNING');
 
     // Error :|
+    console.error('ERROR');
 
     // Info
+    console.info('Stuff');
 
     // Testing
+    console.assert(1 === 2, 'That is wrong!');
 
     // clearing
+    console.clear();
 
     // Viewing DOM Elements
+    console.dir();
 
     // Grouping together
+    dogs.forEach(dog => {
+      console.group(`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old`);
+      console.log(`${dog.name} is ${dog.age * 7} dog years old`);
+      console.groupEnd(`${dog.name}`);
+    });
 
     // counting
+    console.count('Count');
+    console.count('Count');
+    console.count('Count');
+    console.count('Count');
+    console.count('Count');
+    console.count('Count');
 
     // timing
+    console.time('fetching data');
+    fetch('https://api.github.com/users/imdoingitlive')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fethching data');
+        console.log(data);
+      });
 
   </script>
 </body>
