created logic to check the state of the checkboxes and toggle them to checked if inbetween

--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -106,8 +106,28 @@
 <script>
   const checkboxes = document.querySelectorAll('.inbox input[type="checkbox"]');
   
+  let lastChecked;
+
   function handleCheck(e) {
-    console.log(e);
+    // check if they had the shift key down
+    // and check that they are checking it
+    let inBetween = false; // flag variable
+    
+    if(e.shiftKey && this.checked) {
+      checkboxes.forEach(checkbox => {
+        console.log(checkbox);
+        if(checkbox === this || checkbox === lastChecked) {
+          inBetween = !inBetween; // this sets the flag variable
+          console.log('Starting to check them inbetween...');
+        }
+
+        if(inBetween) {
+          checkbox.checked = true;
+        }
+      });
+    }
+    
+    lastChecked = this;
   }
 
   checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
